Bug fix for button overlapping in diary page

--- a/src/components/diary-form/diary-form.styles.css
+++ b/src/components/diary-form/diary-form.styles.css
@@ -1,21 +1,12 @@
 .diary-container{
   padding-left: 10%;
   padding-top: 5%;
-  /* display: flex;
-  flex-direction: column; */
-  
-  /* justify-content: center; */
   width: 75%;
-  /* height: 90vh; */
-  /* padding-top: 100px;
-  padding-left: 50px; */
 }
 .diary-title{
   display: flex;
   justify-content: space-between;
 }
-
-
 .history-button {
   display: flex;
   flex-direction: column;
@@ -31,6 +22,7 @@
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  margin-top: 50px;
 }
 
 .history-button:focus {
